# six-degrees-of-movies

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Taskfile.yml  actor_game.py  docker-compose.yml  entrypoint.py  entrypoint.sh  pyproject.toml  server.py
.claude/: settings.local.json
.github/workflows/: ci.yml
frontend/: index.html
frontend/public/: sitemap.xml
frontend/src/: App.jsx  api.js
frontend/src/components/: ActorInput.jsx  BranchCard.jsx  GraphView.jsx  LeftPanel.jsx  RightPanel.jsx  SliderFilter.jsx  Toggle.jsx
frontend/src/styles/: globals.css
scripts/: setup-github-secrets.sh
src/: actor_game.py  bfs.py  db.py  gcs_db.py  search.py  server.py
terraform/: .terraform.lock.hcl  backend.tf.example  backend.tfvars.example  cloudflare.tf  gcp.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/scripts/: build_and_push.sh
tests/integration/: conftest.py  test_api.py  test_frontend.py
tests/unit/: conftest.py  test_bfs.py  test_entrypoint.py  test_gcs_db.py  test_search.py  test_server.py
